parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_declaracoes
Rule 2     lista_declaracoes -> declaracao
Rule 3     lista_declaracoes -> lista_declaracoes declaracao
Rule 4     declaracao -> declaracao_variaveis
Rule 5     declaracao -> inicializacao_variaveis
Rule 6     declaracao -> declaracao_funcao
Rule 7     declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis
Rule 8     inicializacao_variaveis -> atribuicao
Rule 9     lista_variaveis -> lista_variaveis VIRGULA var
Rule 10    lista_variaveis -> var
Rule 11    var -> ID
Rule 12    var -> ID indice
Rule 13    indice -> indice ABRE_COL expressao FECHA_COL
Rule 14    indice -> ABRE_COL expressao FECHA_COL
Rule 15    tipo -> INTEIRO
Rule 16    tipo -> FLUTUANTE
Rule 17    declaracao_funcao -> tipo cabecalho
Rule 18    declaracao_funcao -> cabecalho
Rule 19    vazio -> <empty>
Rule 20    cabecalho -> ID ABRE_PAR lista_parametros FECHA_PAR corpo FIM
Rule 21    lista_parametros -> lista_parametros VIRGULA parametro
Rule 22    lista_parametros -> parametro
Rule 23    lista_parametros -> vazio
Rule 24    parametro -> tipo DOIS_PONTOS ID
Rule 25    parametro -> parametro ABRE_COL FECHA_COL
Rule 26    corpo -> corpo acao
Rule 27    corpo -> vazio
Rule 28    acao -> expressao
Rule 29    acao -> declaracao_variaveis
Rule 30    acao -> se
Rule 31    acao -> repita
Rule 32    acao -> leia
Rule 33    acao -> escreva
Rule 34    acao -> retorna
Rule 35    acao -> error
Rule 36    se -> SE expressao ENTAO corpo FIM
Rule 37    se -> SE expressao ENTAO corpo SENAO corpo FIM
Rule 38    repita -> REPITA corpo ATE expressao
Rule 39    atribuicao -> var ATRIBUICAO expressao
Rule 40    leia -> LEIA ABRE_PAR var FECHA_PAR
Rule 41    escreva -> ESCREVA ABRE_PAR expressao FECHA_PAR
Rule 42    retorna -> RETORNA ABRE_PAR expressao FECHA_PAR
Rule 43    expressao -> expressao_logica
Rule 44    expressao -> atribuicao
Rule 45    expressao_logica -> expressao_simples
Rule 46    expressao_logica -> expressao_logica operador_logico expressao_simples
Rule 47    expressao_simples -> expressao_aditiva
Rule 48    expressao_simples -> expressao_simples operador_relacional expressao_aditiva
Rule 49    expressao_aditiva -> expressao_multiplicativa
Rule 50    expressao_aditiva -> expressao_aditiva operador_soma expressao_multiplicativa
Rule 51    expressao_multiplicativa -> expressao_unaria
Rule 52    expressao_multiplicativa -> expressao_multiplicativa operador_multiplicacao expressao_unaria
Rule 53    expressao_unaria -> fator
Rule 54    expressao_unaria -> operador_soma fator
Rule 55    expressao_unaria -> operador_negacao fator
Rule 56    operador_negacao -> NEGACAO
Rule 57    operador_relacional -> MENOR
Rule 58    operador_relacional -> MAIOR
Rule 59    operador_relacional -> IGUALDADE
Rule 60    operador_relacional -> DIFERENCA
Rule 61    operador_relacional -> MENOR_IGUAL
Rule 62    operador_relacional -> MAIOR_IGUAL
Rule 63    operador_soma -> SOMA
Rule 64    operador_soma -> SUBTRACAO
Rule 65    operador_multiplicacao -> MULTIPLICACAO
Rule 66    operador_multiplicacao -> DIVISAO
Rule 67    operador_logico -> E_LOGICO
Rule 68    operador_logico -> OU_LOGICO
Rule 69    fator -> ABRE_PAR expressao FECHA_PAR
Rule 70    fator -> var
Rule 71    fator -> chamada_funcao
Rule 72    fator -> numero
Rule 73    numero -> NUM_INTEIRO
Rule 74    numero -> NUM_FLUTUANTE
Rule 75    numero -> NUM_NOTACAO_CIENTIFICA
Rule 76    chamada_funcao -> ID ABRE_PAR lista_argumentos FECHA_PAR
Rule 77    lista_argumentos -> lista_argumentos VIRGULA expressao
Rule 78    lista_argumentos -> expressao
Rule 79    lista_argumentos -> vazio

Terminals, with rules where they appear

ABRE_COL             : 13 14 25
ABRE_PAR             : 20 40 41 42 69 76
ATE                  : 38
ATRIBUICAO           : 39
DIFERENCA            : 60
DIVISAO              : 66
DOIS_PONTOS          : 7 24
ENTAO                : 36 37
ESCREVA              : 41
E_LOGICO             : 67
FECHA_COL            : 13 14 25
FECHA_PAR            : 20 40 41 42 69 76
FIM                  : 20 36 37
FLUTUANTE            : 16
ID                   : 11 12 20 24 76
IGUALDADE            : 59
INTEIRO              : 15
LEIA                 : 40
MAIOR                : 58
MAIOR_IGUAL          : 62
MENOR                : 57
MENOR_IGUAL          : 61
MULTIPLICACAO        : 65
NEGACAO              : 56
NUM_FLUTUANTE        : 74
NUM_INTEIRO          : 73
NUM_NOTACAO_CIENTIFICA : 75
OU_LOGICO            : 68
REPITA               : 38
RETORNA              : 42
SE                   : 36 37
SENAO                : 37
SOMA                 : 63
SUBTRACAO            : 64
VIRGULA              : 9 21 77
error                : 35

Nonterminals, with rules where they appear

acao                 : 26
atribuicao           : 8 44
cabecalho            : 17 18
chamada_funcao       : 71
corpo                : 20 26 36 37 37 38
declaracao           : 2 3
declaracao_funcao    : 6
declaracao_variaveis : 4 29
escreva              : 33
expressao            : 13 14 28 36 37 38 39 41 42 69 77 78
expressao_aditiva    : 47 48 50
expressao_logica     : 43 46
expressao_multiplicativa : 49 50 52
expressao_simples    : 45 46 48
expressao_unaria     : 51 52
fator                : 53 54 55
indice               : 12 13
inicializacao_variaveis : 5
leia                 : 32
lista_argumentos     : 76 77
lista_declaracoes    : 1 3
lista_parametros     : 20 21
lista_variaveis      : 7 9
numero               : 72
operador_logico      : 46
operador_multiplicacao : 52
operador_negacao     : 55
operador_relacional  : 48
operador_soma        : 50 54
parametro            : 21 22 25
programa             : 0
repita               : 31
retorna              : 34
se                   : 30
tipo                 : 7 17 24
var                  : 9 10 39 40 70
vazio                : 23 27 79

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_declaracoes
    (2) lista_declaracoes -> . declaracao
    (3) lista_declaracoes -> . lista_declaracoes declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOIS_PONTOS lista_variaveis
    (8) inicializacao_variaveis -> . atribuicao
    (17) declaracao_funcao -> . tipo cabecalho
    (18) declaracao_funcao -> . cabecalho
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE
    (39) atribuicao -> . var ATRIBUICAO expressao
    (20) cabecalho -> . ID ABRE_PAR lista_parametros FECHA_PAR corpo FIM
    (11) var -> . ID
    (12) var -> . ID indice

    INTEIRO         shift and go to state 10
    FLUTUANTE       shift and go to state 11
    ID              shift and go to state 13

    programa                       shift and go to state 1
    lista_declaracoes              shift and go to state 2
    declaracao                     shift and go to state 3
    declaracao_variaveis           shift and go to state 4
    inicializacao_variaveis        shift and go to state 5
    declaracao_funcao              shift and go to state 6
    tipo                           shift and go to state 7
    atribuicao                     shift and go to state 8
    cabecalho                      shift and go to state 9
    var                            shift and go to state 12

state 1

    (0) S' -> programa .



state 2

    (1) programa -> lista_declaracoes .
    (3) lista_declaracoes -> lista_declaracoes . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOIS_PONTOS lista_variaveis
    (8) inicializacao_variaveis -> . atribuicao
    (17) declaracao_funcao -> . tipo cabecalho
    (18) declaracao_funcao -> . cabecalho
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE
    (39) atribuicao -> . var ATRIBUICAO expressao
    (20) cabecalho -> . ID ABRE_PAR lista_parametros FECHA_PAR corpo FIM
    (11) var -> . ID
    (12) var -> . ID indice

    $end            reduce using rule 1 (programa -> lista_declaracoes .)
    INTEIRO         shift and go to state 10
    FLUTUANTE       shift and go to state 11
    ID              shift and go to state 13

    declaracao                     shift and go to state 14
    declaracao_variaveis           shift and go to state 4
    inicializacao_variaveis        shift and go to state 5
    declaracao_funcao              shift and go to state 6
    tipo                           shift and go to state 7
    atribuicao                     shift and go to state 8
    cabecalho                      shift and go to state 9
    var                            shift and go to state 12

state 3

    (2) lista_declaracoes -> declaracao .

    INTEIRO         reduce using rule 2 (lista_declaracoes -> declaracao .)
    FLUTUANTE       reduce using rule 2 (lista_declaracoes -> declaracao .)
    ID              reduce using rule 2 (lista_declaracoes -> declaracao .)
    $end            reduce using rule 2 (lista_declaracoes -> declaracao .)


state 4

    (4) declaracao -> declaracao_variaveis .

    INTEIRO         reduce using rule 4 (declaracao -> declaracao_variaveis .)
    FLUTUANTE       reduce using rule 4 (declaracao -> declaracao_variaveis .)
    ID              reduce using rule 4 (declaracao -> declaracao_variaveis .)
    $end            reduce using rule 4 (declaracao -> declaracao_variaveis .)


state 5

    (5) declaracao -> inicializacao_variaveis .

    INTEIRO         reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    FLUTUANTE       reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    ID              reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    $end            reduce using rule 5 (declaracao -> inicializacao_variaveis .)


state 6

    (6) declaracao -> declaracao_funcao .

    INTEIRO         reduce using rule 6 (declaracao -> declaracao_funcao .)
    FLUTUANTE       reduce using rule 6 (declaracao -> declaracao_funcao .)
    ID              reduce using rule 6 (declaracao -> declaracao_funcao .)
    $end            reduce using rule 6 (declaracao -> declaracao_funcao .)


state 7

    (7) declaracao_variaveis -> tipo . DOIS_PONTOS lista_variaveis
    (17) declaracao_funcao -> tipo . cabecalho
    (20) cabecalho -> . ID ABRE_PAR lista_parametros FECHA_PAR corpo FIM

    DOIS_PONTOS     shift and go to state 15
    ID              shift and go to state 17

    cabecalho                      shift and go to state 16

state 8

    (8) inicializacao_variaveis -> atribuicao .

    INTEIRO         reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    FLUTUANTE       reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    ID              reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    $end            reduce using rule 8 (inicializacao_variaveis -> atribuicao .)


state 9

    (18) declaracao_funcao -> cabecalho .

    INTEIRO         reduce using rule 18 (declaracao_funcao -> cabecalho .)
    FLUTUANTE       reduce using rule 18 (declaracao_funcao -> cabecalho .)
    ID              reduce using rule 18 (declaracao_funcao -> cabecalho .)
    $end            reduce using rule 18 (declaracao_funcao -> cabecalho .)


state 10

    (15) tipo -> INTEIRO .

    DOIS_PONTOS     reduce using rule 15 (tipo -> INTEIRO .)
    ID              reduce using rule 15 (tipo -> INTEIRO .)


state 11

    (16) tipo -> FLUTUANTE .

    DOIS_PONTOS     reduce using rule 16 (tipo -> FLUTUANTE .)
    ID              reduce using rule 16 (tipo -> FLUTUANTE .)


state 12

    (39) atribuicao -> var . ATRIBUICAO expressao

    ATRIBUICAO      shift and go to state 18


state 13

    (20) cabecalho -> ID . ABRE_PAR lista_parametros FECHA_PAR corpo FIM
    (11) var -> ID .
    (12) var -> ID . indice
    (13) indice -> . indice ABRE_COL expressao FECHA_COL
    (14) indice -> . ABRE_COL expressao FECHA_COL

    ABRE_PAR        shift and go to state 19
    ATRIBUICAO      reduce using rule 11 (var -> ID .)
    ABRE_COL        shift and go to state 21

    indice                         shift and go to state 20

state 14

    (3) lista_declaracoes -> lista_declaracoes declaracao .

    INTEIRO         reduce using rule 3 (lista_declaracoes -> lista_declaracoes declaracao .)
    FLUTUANTE       reduce using rule 3 (lista_declaracoes -> lista_declaracoes declaracao .)
    ID              reduce using rule 3 (lista_declaracoes -> lista_declaracoes declaracao .)
    $end            reduce using rule 3 (lista_declaracoes -> lista_declaracoes declaracao .)


state 15

    (7) declaracao_variaveis -> tipo DOIS_PONTOS . lista_variaveis
    (9) lista_variaveis -> . lista_variaveis VIRGULA var
    (10) lista_variaveis -> . var
    (11) var -> . ID
    (12) var -> . ID indice

    ID              shift and go to state 24

    lista_variaveis                shift and go to state 22
    var                            shift and go to state 23

state 16

    (17) declaracao_funcao -> tipo cabecalho .

    INTEIRO         reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    FLUTUANTE       reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    ID              reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    $end            reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)


state 17

    (20) cabecalho -> ID . ABRE_PAR lista_parametros FECHA_PAR corpo FIM

    ABRE_PAR        shift and go to state 19


state 18

    (39) atribuicao -> var ATRIBUICAO . expressao
    (43) expressao -> . expressao_logica
    (44) expressao -> . atribuicao
    (45) expressao_logica -> . expressao_simples
    (46) expressao_logica -> . expressao_logica operador_logico expressao_simples
    (39) atribuicao -> . var ATRIBUICAO expressao
    (47) expressao_simples -> . expressao_aditiva
    (48) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (11) var -> . ID
    (12) var -> . ID indice
    (49) expressao_aditiva -> . expressao_multiplicativa
    (50) expressao_aditiva -> . expressao_aditiva operador_soma expressao_multiplicativa
    (51) expressao_multiplicativa -> . expressao_unaria
    (52) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (53) expressao_unaria -> . fator
    (54) expressao_unaria -> . operador_soma fator
    (55) expressao_unaria -> . operador_negacao fator
    (69) fator -> . ABRE_PAR expressao FECHA_PAR
    (70) fator -> . var
    (71) fator -> . chamada_funcao
    (72) fator -> . numero
    (63) operador_soma -> . SOMA
    (64) operador_soma -> . SUBTRACAO
    (56) operador_negacao -> . NEGACAO
    (76) chamada_funcao -> . ID ABRE_PAR lista_argumentos FECHA_PAR
    (73) numero -> . NUM_INTEIRO
    (74) numero -> . NUM_FLUTUANTE
    (75) numero -> . NUM_NOTACAO_CIENTIFICA

    ID              shift and go to state 31
    ABRE_PAR        shift and go to state 37
    SOMA            shift and go to state 40
    SUBTRACAO       shift and go to state 41
    NEGACAO         shift and go to state 42
    NUM_INTEIRO     shift and go to state 43
    NUM_FLUTUANTE   shift and go to state 44
    NUM_NOTACAO_CIENTIFICA shift and go to state 45

    var                            shift and go to state 25
    expressao                      shift and go to state 26
    expressao_logica               shift and go to state 27
    atribuicao                     shift and go to state 28
    expressao_simples              shift and go to state 29
    expressao_aditiva              shift and go to state 30
    expressao_multiplicativa       shift and go to state 32
    operador_soma                  shift and go to state 33
    expressao_unaria               shift and go to state 34
    fator                          shift and go to state 35
    operador_negacao               shift and go to state 36
    chamada_funcao                 shift and go to state 38
    numero                         shift and go to state 39

state 19

    (20) cabecalho -> ID ABRE_PAR . lista_parametros FECHA_PAR corpo FIM
    (21) lista_parametros -> . lista_parametros VIRGULA parametro
    (22) lista_parametros -> . parametro
    (23) lista_parametros -> . vazio
    (24) parametro -> . tipo DOIS_PONTOS ID
    (25) parametro -> . parametro ABRE_COL FECHA_COL
    (19) vazio -> .
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE

    FECHA_PAR       reduce using rule 19 (vazio -> .)
    VIRGULA         reduce using rule 19 (vazio -> .)
    INTEIRO         shift and go to state 10
    FLUTUANTE       shift and go to state 11

    lista_parametros               shift and go to state 46
    parametro                      shift and go to state 47
    vazio                          shift and go to state 48
    tipo                           shift and go to state 49

state 20

    (12) var -> ID indice .
    (13) indice -> indice . ABRE_COL expressao FECHA_COL

    ATRIBUICAO      reduce using rule 12 (var -> ID indice .)
    VIRGULA         reduce using rule 12 (var -> ID indice .)
    INTEIRO         reduce using rule 12 (var -> ID indice .)
    FLUTUANTE       reduce using rule 12 (var -> ID indice .)
    ID              reduce using rule 12 (var -> ID indice .)
    $end            reduce using rule 12 (var -> ID indice .)
    FIM             reduce using rule 12 (var -> ID indice .)
    error           reduce using rule 12 (var -> ID indice .)
    SE              reduce using rule 12 (var -> ID indice .)
    REPITA          reduce using rule 12 (var -> ID indice .)
    LEIA            reduce using rule 12 (var -> ID indice .)
    ESCREVA         reduce using rule 12 (var -> ID indice .)
    RETORNA         reduce using rule 12 (var -> ID indice .)
    ABRE_PAR        reduce using rule 12 (var -> ID indice .)
    SOMA            reduce using rule 12 (var -> ID indice .)
    SUBTRACAO       reduce using rule 12 (var -> ID indice .)
    NEGACAO         reduce using rule 12 (var -> ID indice .)
    NUM_INTEIRO     reduce using rule 12 (var -> ID indice .)
    NUM_FLUTUANTE   reduce using rule 12 (var -> ID indice .)
    NUM_NOTACAO_CIENTIFICA reduce using rule 12 (var -> ID indice .)
    ATE             reduce using rule 12 (var -> ID indice .)
    SENAO           reduce using rule 12 (var -> ID indice .)
    MULTIPLICACAO   reduce using rule 12 (var -> ID indice .)
    DIVISAO         reduce using rule 12 (var -> ID indice .)
    MENOR           reduce using rule 12 (var -> ID indice .)
    MAIOR           reduce using rule 12 (var -> ID indice .)
    IGUALDADE       reduce using rule 12 (var -> ID indice .)
    DIFERENCA       reduce using rule 12 (var -> ID indice .)
    MENOR_IGUAL     reduce using rule 12 (var -> ID indice .)
    MAIOR_IGUAL     reduce using rule 12 (var -> ID indice .)
    E_LOGICO        reduce using rule 12 (var -> ID indice .)
    OU_LOGICO       reduce using rule 12 (var -> ID indice .)
    FECHA_COL       reduce using rule 12 (var -> ID indice .)
    FECHA_PAR       reduce using rule 12 (var -> ID indice .)
    ENTAO           reduce using rule 12 (var -> ID indice .)
    ABRE_COL        shift and go to state 50


state 21

    (14) indice -> ABRE_COL . expressao FECHA_COL
    (43) expressao -> . expressao_logica
    (44) expressao -> . atribuicao
    (45) expressao_logica -> . expressao_simples
    (46) expressao_logica -> . expressao_logica operador_logico expressao_simples
    (39) atribuicao -> . var ATRIBUICAO expressao
    (47) expressao_simples -> . expressao_aditiva
    (48) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (11) var -> . ID
    (12) var -> . ID indice
    (49) expressao_aditiva -> . expressao_multiplicativa
    (50) expressao_aditiva -> . expressao_aditiva operador_soma expressao_multiplicativa
    (51) expressao_multiplicativa -> . expressao_unaria
    (52) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (53) expressao_unaria -> . fator
    (54) expressao_unaria -> . operador_soma fator
    (55) expressao_unaria -> . operador_negacao fator
    (69) fator -> . ABRE_PAR expressao FECHA_PAR
    (70) fator -> . var
    (71) fator -> . chamada_funcao
    (72) fator -> . numero
    (63) operador_soma -> . SOMA
    (64) operador_soma -> . SUBTRACAO
    (56) operador_negacao -> . NEGACAO
    (76) chamada_funcao -> . ID ABRE_PAR lista_argumentos FECHA_PAR
    (73) numero -> . NUM_INTEIRO
    (74) numero -> . NUM_FLUTUANTE
    (75) numero -> . NUM_NOTACAO_CIENTIFICA

    ID              shift and go to state 31
    ABRE_PAR        shift and go to state 37
    SOMA            shift and go to state 40
    SUBTRACAO       shift and go to state 41
    NEGACAO         shift and go to state 42
    NUM_INTEIRO     shift and go to state 43
    NUM_FLUTUANTE   shift and go to state 44
    NUM_NOTACAO_CIENTIFICA shift and go to state 45

    expressao                      shift and go to state 51
    expressao_logica               shift and go to state 27
    atribuicao                     shift and go to state 28
    expressao_simples              shift and go to state 29
    var                            shift and go to state 25
    expressao_aditiva              shift and go to state 30
    expressao_multiplicativa       shift and go to state 32
    operador_soma                  shift and go to state 33
    expressao_unaria               shift and go to state 34
    fator                          shift and go to state 35
    operador_negacao               shift and go to state 36
    chamada_funcao                 shift and go to state 38
    numero                         shift and go to state 39

state 22

    (7) declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .
    (9) lista_variaveis -> lista_variaveis . VIRGULA var

    INTEIRO         reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    FLUTUANTE       reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    ID              reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    $end            reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    FIM             reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    error           reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    SE              reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    REPITA          reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    LEIA            reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    ESCREVA         reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    RETORNA         reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    ABRE_PAR        reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    SOMA            reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    SUBTRACAO       reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    NEGACAO         reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    NUM_INTEIRO     reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    NUM_FLUTUANTE   reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    NUM_NOTACAO_CIENTIFICA reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    ATE             reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    SENAO           reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    VIRGULA         shift and go to state 52


state 23

    (10) lista_variaveis -> var .
